# augustium

./: .gitattributes  .gitignore  .npmignore  .ovsx.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  Dockerfile  GITHUB_LINGUIST.md  INSTALL.md  LICENSE  ML_FEATURES.md  OPEN_VSX_SETUP.md  PACKAGE_MANAGER_SETUP.md  README.md  ROADMAP.md  cspell.json  install.sh  linguist-definition.yml  npm-package.json  package.json
.github/: linguist.yml
.github/workflows/: publish-vscode-extension.yml  release.yml
.trae/documents/: augustium_wasm_compiler_requirements.md
.vercel/: project.json
Formula/: augustium.rb
benches/: compiler.rs  vm.rs
docs/: API_REFERENCE.md  COOKBOOK.md  DEPLOYMENT_GUIDE.md  EXAMPLES.md  FAQ.md  LANGUAGE_GUIDE.md  MIGRATION_GUIDE.md  QUICK_START.md  SECURITY.md  TROUBLESHOOTING.md  TUTORIALS.md
examples/: README.md  aug_repl.rs  calculator_cli.rs  hello_world.aug  liquidity-pool.aug  simple-token.aug  simple_hello.aug  simple_token.aug  voting-contract.aug
scripts/: install.js  publish-to-openvsx.sh
src/: ast.rs  async_runtime.rs  avm.rs  avm_extensions.rs  codegen.rs  codegen_extensions.rs  consensus.rs  consensus_extensions.rs  cross_chain.rs  debug_extensions.rs  debugger.rs  deployment_tools.rs  dev_tools.rs  error.rs  evm_compat.rs  gas.rs  ide_plugins.rs  lexer.rs  lib.rs  lsp.rs  macro_system.rs  main.rs  optimization.rs  package_extensions.rs  package_manager.rs  parser.rs  parser_extensions.rs  profiler.rs  semantic.rs  semantic_extensions.rs  syntax_standard.rs  test_framework.rs  transaction.rs  wasm_backend.rs  web3_libs.rs
src/i18n/: mod.rs
src/interop/: ffi.rs
src/stdlib/: access_control.rs  address.rs  collections.rs  core_types.rs  crypto.rs  defi.rs  events.rs  governance.rs  math.rs  ml.rs  mod.rs  oracle.rs  storage.rs  string.rs  tests.rs  time.rs
src/stdlib/ml/: advanced_ml.rs  computer_vision.rs  deep_learning.rs  distributed.rs  framework_integration.rs  gpu.rs  hyperparameter_tuning.rs  mod.rs  nlp.rs  reinforcement_learning.rs  tensor.rs
src/testing/: property_based.rs
src/verification/: mod.rs
tests/: end_to_end_test.rs  integration_test.rs
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  augustium-1.0.4.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/snippets/: augustium.json
vscode-extension/src/: advanced-features.ts  extension.ts
vscode-extension/syntaxes/: augustium.tmLanguage.json
wasm/: Cargo.toml  README.md  augustium.d.ts  wasm-pack.toml
wasm/examples/: web_integration.js
wasm/src/: avm_bindings.rs  compiler.rs  js_api.rs  lib.rs  runtime.rs  types.rs  utils.rs  wasm_extensions.rs
