[package]
name = "augustc"
version = "0.1.0"
edition = "2021"
authors = ["August Moreau <august@augustium.org>", "Augustium Team"]
description = "The Augustium programming language compiler and virtual machine for blockchain smart contracts"
license = "MIT"
repository = "https://github.com/AugustMoreau/augustium"
homepage = "https://augustium.org"
documentation = "https://docs.augustium.org"
keywords = ["blockchain", "smart-contracts", "compiler", "virtual-machine", "augustium"]
categories = ["development-tools", "compilers", "cryptography::cryptocurrencies"]
readme = "README.md"
include = [
    "src/**/*",
    "examples/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "INSTALL.md"
]

[lib]
name = "augustc"
path = "src/lib.rs"

[[bin]]
name = "augustc"
path = "src/main.rs"

[[bin]]
name = "august"
path = "src/bin/august.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = "0.28"
ripemd = "0.1"
hex = "0.4"
rand = "0.8"

# Serialization
bincode = "1.3"

# Utilities
once_cell = "1.19"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"

# Optional features for advanced functionality
rayon = { version = "1.8", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
# Testing
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.8"

# Test utilities
temp-dir = "0.1"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["std"]
std = []
parallel = ["rayon"]
async = ["tokio"]
all = ["parallel", "async"]

# Optimization profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true
overflow-checks = true

# Benchmark profile
[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[[bench]]
name = "compiler_benchmarks"
harness = false
path = "benches/compiler.rs"

[[bench]]
name = "vm_benchmarks"
harness = false
path = "benches/vm.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Workspace configuration (if this becomes part of a larger workspace)
# [workspace]
# members = [
#     "augustc-core",
#     "augustc-cli",
#     "augustc-vm",
#     "augustc-std",
#     "augustc-tools"
# ]
# resolver = "2"