[package]
name = "augustium-wasm"
version = "1.0.1"
edition = "2021"
authors = ["August Moreau <august@augustium.org>", "Augustium Team"]
description = "WebAssembly bindings for the Augustium programming language compiler"
license = "MIT"
repository = "https://github.com/AugustMoreau/augustium"
homepage = "https://augustium.org"
documentation = "https://docs.augustium.org"
keywords = ["blockchain", "smart-contracts", "webassembly", "wasm", "augustium"]
categories = ["development-tools", "compilers", "wasm"]
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Crypto",
  "CryptoKey",
  "SubtleCrypto",
  "Storage"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = "0.4"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
bincode = "1.3"

# Import the main augustc library
augustc = { path = "..", default-features = false, features = ["wasm-minimal"] }

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"